이미지 파일에 한글이 들아가 About_me.jpeg gamedigger22_logo.png 로 수정했습니다

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- HERO -->
   <section class="hero" id="hero">
     <div class="section-inner">
-      <img src="images/gamedigger22_로고.png" alt="Game Digger 22 Logo" class="hero-logo">
+      <img src="images/gamedigger22_logo.png" alt="Game Digger 22 Logo" class="hero-logo">
       <h1>게임의 과거, 현재, 그리고 미래를 찾습니다.</h1>
       <p class="hero-keywords">Game PM · Business · Operations</p>
       <p>게임을 만들고, 전시하고, 시장과 사람을 연결합니다.</p>
@@ -38,7 +38,7 @@
     <div class="section-inner">
       <div class="about-container">
         <div class="about-profile">
-          <img src="images/About_장은태.jpeg" alt="장은태 프로필 사진" class="about-profile-pic">
+          <img src="images/About_me.jpeg" alt="장은태 프로필 사진" class="about-profile-pic">
           <h3 class="about-name">장은태</h3>
           <div class="about-social-links">
             <a href="mailto:gamedigger3@gmail.com" title="Email">
@@ -145,9 +145,6 @@
                           <h4>주요 성과</h4>
                           <ul>
                               <li>스토브 주간 인기순위 1위 달성</li>
-                              <li>BIC, 대구콘텐츠페어, G-Star 출품</li>
-                              <li>코믹콘 2025, 타이페이 게임쇼 출품 확정</li>
-                              <li>다수 오프라인 전시에서 플레이 테스트 진행 및 피드백 수집 → 게임 개선 반영</li>
                           </ul>
                       </div>
                   </div>
